--- a/7RMartProject/pom.xml
+++ b/7RMartProject/pom.xml
@@ -3,6 +3,30 @@
   <groupId>com.obsqura</groupId>
   <artifactId>7RMartProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+		<defaultGoal>package</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile><!-- specify the testng.xml that needs to execute-->
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
   <dependencies>
 	  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -36,5 +60,22 @@
     <artifactId>javafaker</artifactId>
     <version>0.16</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.9</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.logging.log4j</groupId>
+	<artifactId>log4j-api</artifactId>
+	<version>2.17.2</version>
+</dependency>
+<dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.22</version>
+      </dependency>
+
   </dependencies>
-</project>
+  </project>
