--- a/7RMartProject/pom.xml
+++ b/7RMartProject/pom.xml
@@ -18,7 +18,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.0.0</version>
 				<configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile><!-- specify the testng.xml that needs to execute-->
@@ -30,7 +30,7 @@
   <dependencies>
 	  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java </artifactId>
+    <artifactId>selenium-java</artifactId>
     <version>4.15.0</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
