--- a/7RMartProject/pom.xml
+++ b/7RMartProject/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.obsqura</groupId>
   <artifactId>7RMartProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
+  <!-- <build>
 		<defaultGoal>package</defaultGoal>
 		<plugins>
 			<plugin>
@@ -21,12 +21,36 @@
 				<version>3.0.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile><!-- specify the testng.xml that needs to execute-->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   <dependencies>
 	  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -78,4 +102,5 @@
       </dependency>
 
   </dependencies>
+ 
   </project>
